[package]
name = "quadoculars"
version = "0.1.4"
authors = ["Ar37-rs <adyaro37@gmail.com>"]
edition = "2018"
description = "Concurrent, composable simple file watcher on top of notify-rs with fast live reloading support."
license = "Apache-2.0"
repository = "https://github.com/Ar37-rs/quadoculars"
readme = "README.md"
keywords = ["filesystem", "utility", "events"]

[dependencies.cfg-if]
version = "1"

[dependencies.notify]
version = "5.0.0-pre.6"

[dependencies.crossbeam-channel]
version = "0.5"
optional = true

[dependencies.flume]
version = "0.10"
optional = true

[dependencies.serde]
version = "1"
optional = true

[dependencies.serde_json]
version = "1"
optional = true

[dependencies.ron]
version = "0.6"
optional = true

[features]
default = []
live_json = ["serde", "serde_json"]
live_ron = ["serde", "ron"]
flume_channel = ["flume"]
crossbeam_channel = ["crossbeam-channel"]

[dev-dependencies]
cfg-if = "1"
flume = "0.10"
crossbeam-channel = "0.5"
