[package]
name = "fltk_lr_from_ron"
version = "0.1.0"
authors = ["Ar37-rs <adyaro37@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
fltk = "0.15.7"
anyhow = "1"
quadoculars = { version = "0.1", path = "../../", features = ["live_ron"] }
serde = { version = "1", features = ["derive"] }
