[package]
name = "serde_json_live_reload"
version = "0.1.0"
authors = ["Ar37-rs <adyaro37@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1"
quadoculars = { version = "0.1", path = "../../", features = ["live_json"] }
serde_json = "1"
